<resources>
    <string name="app_name">Calculadora</string>
    <string name="action_settings" />
    <string name="__0">0</string>
    <string name="_1">1</string>
    <string name="c">C</string>
    <string name="del">DEL</string>
    <string name="and">AND</string>
    <string name="or">OR</string>
    <string name="not">NOT</string>
    <string name="xor">XOR</string>
    <string name="nand">NAND</string>
    <string name="nor">NOR</string>
    <string name="sum">+</string>
    <string name="mult">*</string>
    <string name="nxor">NXOR</string>
    <string name="rest">-</string>
    <string name="mod">%</string>
    <string name="equal">=</string>
    <string name="resultado_decimal">resultado_decimal</string>
    <string name="resultado_bin">resultado_bin</string>
    <string name="decimal">Decimal</string>
    <string name="binario">Binario</string>
    <string name="ir">Ir</string>
    <string name="_0">0</string>
    <string name="shl2"><![CDATA[<<]]></string>
    <string name="shr2"><![CDATA[>>]]></string>
    <string name="shl"><![CDATA[<<]]></string>
    <string name="shr"><![CDATA[>>]]></string>
</resources>
