<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".BinaryCalc">

    <TextView
        android:id="@+id/result_decimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:gravity="end"
        android:text="@string/resultado_decimal"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/result_binary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_decimal"
        android:ellipsize="start"
        android:gravity="end"
        android:singleLine="true"
        android:text="@string/resultado_bin"
        android:textSize="60sp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_binary"
        android:rowCount="4"
        android:columnCount="4"
        android:gravity="center">

        <Button
            android:layout_row="0"
            android:layout_column="0"
            android:onClick="onEnterZero"
            android:text="@string/_0" />

        <Button
            android:layout_row="0"
            android:layout_column="1"
            android:onClick="onEnterOne"
            android:text="@string/_1" />

        <Button
            android:layout_row="0"
            android:layout_column="2"
            android:onClick="onClear"
            android:text="@string/c" />

        <Button
            android:layout_row="0"
            android:layout_column="3"
            android:onClick="onAllClear"
            android:text="@string/del" />

        <Button
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="computeAnd"
            android:text="@string/and" />

        <Button
            android:layout_row="1"
            android:layout_column="1"
            android:onClick="computeOr"
            android:text="@string/or" />

        <Button
            android:layout_row="1"
            android:layout_column="2"
            android:onClick="computeAdd"
            android:text="@string/sum" />

        <Button
            android:layout_row="1"
            android:layout_column="3"
            android:onClick="computeSub"
            android:text="@string/rest" />

        <Button
            android:layout_row="2"
            android:layout_column="0"
            android:onClick="computeNot"
            android:text="@string/not" />

        <Button
            android:layout_row="2"
            android:layout_column="1"
            android:onClick="computeXor"
            android:text="@string/xor" />

        <Button
            android:layout_row="2"
            android:layout_column="2"
            android:onClick="computeMult"
            android:text="@string/mult" />

        <Button
            android:layout_row="2"
            android:layout_column="3"
            android:onClick="computeMod"
            android:text="@string/mod" />

        <Button
            android:layout_row="3"
            android:layout_column="0"
            android:onClick="computeNand"
            android:text="@string/nand" />

        <Button
            android:layout_row="3"
            android:layout_column="1"
            android:onClick="computeNor"
            android:text="@string/nor" />

        <Button
            android:layout_row="3"
            android:layout_column="2"
            android:onClick="computeNxor"
            android:text="@string/nxor" />

        <Button
            android:layout_row="3"
            android:layout_column="3"
            android:onClick="calculate"
            android:text="@string/equal" />

    </GridLayout>

</RelativeLayout>
