<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuSeleccion">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="175dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/decimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decimal" />

        <RadioButton
            android:id="@+id/binario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/binario" />
    </RadioGroup>

    <Button
        android:id="@+id/ir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:onClick="calcSelector"/>
</android.support.constraint.ConstraintLayout>